
syntax= "proto3";

service displayInfo{
rpc GetFeature(Number) returns (Number){}	
}

message Number{
	
 string value=1;
}

